图片地址更改

--- a/课程30/轮播细节/自己再认真写一边.html
+++ b/课程30/轮播细节/自己再认真写一边.html
@@ -47,12 +47,12 @@
 <div class="wrapper">
     <div id="window" class="window">
         <div id="images" class="images">
-            <img src="../轮播初实现/luffy.jpg" alt="" width="400" height="400">
-            <img src="../轮播初实现/zoro.jpg" alt="" width="400" height="400">
-            <img src="../轮播初实现/nami.jpg" alt="" width="400" height="400">
-            <img src="../轮播初实现/wusuopu.jpg" alt="" width="400" height="400">
-            <img src="../轮播初实现/shanzhi.jpg" alt="" width="400" height="400">
-            <img src="../轮播初实现/qiaoba.jpg" alt="" width="400" height="400">
+            <img src="https://s9.rr.itc.cn/r/wapChange/20172_14_18/a1p7nb01493615877405.jpg" alt="" width="400" height="400">
+            <img src="https://s9.rr.itc.cn/r/wapChange/20172_14_18/a9k1dm9422823988706.jpg" alt="" width="400" height="400">
+            <img src="https://s9.rr.itc.cn/r/wapChange/20172_14_18/a3i9jv9422886612706.jpg" alt="" width="400" height="400">
+            <img src="https://s9.rr.itc.cn/r/wapChange/20172_14_18/a9i2on6302018312619.jpg" alt="" width="400" height="400">
+            <img src="https://s9.rr.itc.cn/r/wapChange/20172_14_18/a27bkr9422835431706.jpg" alt="" width="400" height="400">
+            <img src="https://s9.rr.itc.cn/r/wapChange/20172_14_18/a4s3dk9422869721706.jpg" alt="" width="400" height="400">
         </div>
     </div>
 </div>
